--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "@tanstack/react-query": "^5.80.10",
+    "@tanstack/react-query-devtools": "^5.80.10",
     "axios": "^1.10.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
