--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.30.1",
     "typeorm": "^0.3.24",
     "yup": "^1.6.1"
