--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tanstack/react-query": "^5.80.10",
     "@tanstack/react-query-devtools": "^5.80.10",
     "axios": "^1.10.0",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
     "pg": "^8.16.1",
@@ -26,8 +28,10 @@
     "react-intersection-observer": "^9.16.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.10.1",
     "typeorm": "^0.3.24",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
