--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -17,13 +18,18 @@
     "@tanstack/react-query-devtools": "^5.80.10",
     "axios": "^1.10.0",
     "emoji-picker-react": "^4.12.2",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
     "pg": "^8.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-filepond": "^7.1.3",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-query": "^3.39.3",
