--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "connect-redis": "^9.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.1",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
