--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.18.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.518.0",
     "pg": "^8.16.1",
     "react": "^18.2.0",
@@ -30,6 +33,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-query": "^3.39.3",
